# tree-sitter-make

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  lexer.c  lexer.re.c  node-types.json  parser.c  scanner.c
test/: BUGS.txt
test/corpus/: ISSUE_1627.mk  KNOWS_ISSUES.mk  comment.txt  conditionals.mk  context.mk  directives.mk  expansions.mk  functions.mk  functions.txt  odities.mk  rule.mk  scanner.txt  variable_definition.txt
test/highlight/: names.mk
