[package]
name = "tree-sitter-make"
description = "make grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "make", "makefile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-make"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
